[metadata]
name = asyncUnittest
version = 1.5.6
author = Antas
description = Fully asynchronous unit test
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/monk-after-90s/asyncUnittest.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
license = MIT
[options]
packages = find:
python_requires = >=3.7
install_requires =
    beeprint
    loguru

